--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
   </header>
   <main>
     <section class="section-about">
-      <div class="u-center-text u-margin-bottom-8">
+      <div class="u-center-text u-margin-bottom-large">
         <h2 class="heading-secondary">
           Exciting tours for adventurous people
         </h2>
       </div>
       <div class="row">
         <div class="col-1-of-2">
-          Text-Content
+          <h3 class="heading-tertiary">You're going to fall in love with nature.</h3>
+          <p class="paragraph u-margin-bottom-small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolorum laudantium doloremque quasi odio ducimus, suscipit magni beatae error, expedita excepturi veniam placeat dolore consequatur. Ullam nam aut aspernatur provident.
+          </p>
+          <h3 class="heading-tertiary">Live adventure like you have never have before.</h3>
+          <p class="paragraph u-margin-bottom-small">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates odit autem architecto odio labore quaerat suscipit dolores eaque? Inventore, illum iure animi dolorem nisi vel fuga aut corporis libero! Dolorum!
+          </p>
+          <a href="#" class="btn-text">Learn More &rarr;</a>
         </div>
         <div class="col-1-of-2">
           Image-Composition
