--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="heading-primary--main">Outdoors</span>
         <span class="heading-primary--sub">is where life happens</span>
       </h1>
-      <a  class="btn btn--white btn--animated" href="#">Discover our tours</a>
+      <a class="btn btn--white btn--animated" href="#">Discover our tours</a>
     </div>
   </header>
   <main>
@@ -37,11 +37,15 @@
         <div class="col-1-of-2">
           <h3 class="heading-tertiary">You're going to fall in love with nature.</h3>
           <p class="paragraph u-margin-bottom-small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolorum laudantium doloremque quasi odio ducimus, suscipit magni beatae error, expedita excepturi veniam placeat dolore consequatur. Ullam nam aut aspernatur provident.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam dolorum laudantium doloremque quasi odio
+            ducimus, suscipit magni beatae error, expedita excepturi veniam placeat dolore consequatur. Ullam nam aut
+            aspernatur provident.
           </p>
           <h3 class="heading-tertiary">Live adventure like you have never have before.</h3>
           <p class="paragraph u-margin-bottom-small">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates odit autem architecto odio labore quaerat suscipit dolores eaque? Inventore, illum iure animi dolorem nisi vel fuga aut corporis libero! Dolorum!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates odit autem architecto odio labore
+            quaerat suscipit dolores eaque? Inventore, illum iure animi dolorem nisi vel fuga aut corporis libero!
+            Dolorum!
           </p>
           <a href="#" class="btn-text">Learn More &rarr;</a>
         </div>
@@ -50,6 +54,50 @@
             <img src="img/nat-1-large.jpg" alt="photo 1" class="composition__photo composition__photo--p1">
             <img src="img/nat-2-large.jpg" alt="photo 2" class="composition__photo composition__photo--p2">
             <img src="img/nat-3-large.jpg" alt="photo 3" class="composition__photo composition__photo--p3">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-features">
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-world"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+            <p class="feature-box__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis distinctio eius aut Quis distinctio eius
+              aut
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-compass"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+            <p class="feature-box__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis distinctio eius aut Quis distinctio eius
+              aut
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-map"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+            <p class="feature-box__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis distinctio eius aut Quis distinctio eius
+              aut
+            </p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="feature-box__icon icon-basic-heart"></i>
+            <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+            <p class="feature-box__text">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis distinctio eius aut Quis distinctio eius
+              aut
+            </p>
           </div>
         </div>
       </div>
